testsuite/tests/lexical_envs/invalid_add_to_env/kv_key/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    env_spec {
        add_to_env_kv(key=1, value=self)
    }
}
